cmake_minimum_required(VERSION 3.22.1)
project(ExpandableArray CXX)
set(CMAKE_CXX_FLAGS -std=c++14)
aux_source_directory(. SRC_LIST)

if(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "debug"))
    message("Debug mode.")
    string(CONCAT CMAKE_CXX_FLAGS " -g")
    add_executable(test_debug ${SRC_LIST})
elseif(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "release"))
    message("Release mode.")
    string(CONCAT CMAKE_CXX_FLAGS " -O3")
    add_executable(test_release ${SRC_LIST})
else()
    message("Unknown build pattern.")
endif()
